large files issues

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,9 @@
 <a href="files/index.htm">files</a>
+
+<hr/>
+
+<h>Large Files Issues:(>1MB && <100 (MB)</h>
+<p>run following cmd first.</p>
+<p>
+    git config --global http.postBuffer 157286400
+</p>
