--- a/index.htm
+++ b/index.htm
@@ -7,3 +7,4 @@
 <p>
     git config --global http.postBuffer 157286400
 </p>
+<a href="https://stackoverflow.com/questions/62753648/rpc-failed-http-400-curl-22-the-requested-url-returned-error-400-bad-request">link</a>
